--- a/student-client/src/App.css
+++ b/student-client/src/App.css
@@ -13,6 +13,8 @@
   }
 }
 
+
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,6 +24,19 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.custom-link{
+  /* change to block */
+  display: hidden;
+  /* background-color: #4CAF50; /* Green
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px; */
 }
 
 .App-link {
